-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.10, 6.8.4, 6.9.1, 6.9, 6.10.0 Beta3
-
6.9.0
-
None
-
192046793 (dev), a6bacbbbb (dev), e0d8eed56 (dev), d4b21f2c0 (6.9), 7a6d4740a (6.9), fb545a00c (6.9), 5d7cd8bd3 (tqtc/lts-6.8), fe10687e2 (tqtc/lts-6.8), 33b92962c (tqtc/lts-6.5), 7b0a72af0 (tqtc/lts-6.5)
Aotstats snippet:
__config: [Slider.qml:27:37]
result: Error: Could not compile binding for __config: Cannot load property slider from Config::controls with type QObject.
duration: 53211070us
Apparently it takes a long time to load Config.qml as part of compiling that binding.
- relates to
-
QTBUG-136058 [Reg] qmllint: mix up between required properties
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135244 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 641287,5 | ImportVisitor: Fix nonsensical code for checking required properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 641288,5 | Compiler: Optimize checking required properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 641320,7 | Compiler: Move QQmlJSScope::descendants next to its only user | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642031,3 | ImportVisitor: Fix nonsensical code for checking required properties | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642032,3 | Compiler: Optimize checking required properties | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642033,3 | Compiler: Move QQmlJSScope::descendants next to its only user | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642681,2 | ImportVisitor: Fix nonsensical code for checking required properties | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 642683,2 | Compiler: Optimize checking required properties | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 642739,4 | ImportVisitor: Fix nonsensical code for checking required properties | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | +1 |
| 642740,2 | Compiler: Optimize checking required properties | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |