ImportVisitor: Fix nonsensical code for checking required properties

We create and increment an iterator and then don't use it...

Amends daf57e29de918b7b4be7bb0d469db0c51d41bb07

Task-number: QTBUG-135244
Pick-to: 6.9 6.8 6.5
Change-Id: Ia92df8e7dc337786eba43980364ad03c747ec11b
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>